tests/NormalTests/paczka2/big_fuzzy/30291440.err
Error in line 1: A737 S245 30,99
Error in line 2: A737 S245 140,0
Error in line 7: M5rUiqU S699 r1,9
Error in line 10: M57UiqU S699 -3,8
Error in line 16: OhW7 A737 19,5
Error in line 21: M57UiqUA7375,7
Error in line 53: lAcpvYE S245 86,0
Error in line 41: OhW7 S245 57,9
Error in line 40: M57UiqU A101 23,0
Error in line 58: A737 A737 67,5
Error in line 64: lAcpvYE A737 100,0
Error in line 73: A737 S245 60,0
Error in line 70: dMSx S699 1,5
Error in line 74: 0Bzcl S245 51,6
Error in line 76: A737 A737 64,9
Error in line 84: M57UiqU S699 57,6
Error in line 93: cIQPnu S699 67,8
Error in line 105: lAcpvYE A737 16,02
Error in line 109: A737 A101 18,2
Error in line 110: A737 S699 43,8
Error in line 90: 0Bzcl S699 273,4
Error in line 112: lAcpvYE A737 46,2
Error in line 114: cIQPnu S699 29,6
Error in line 123: 0Bzcl S245 163,6
Error in line 135: OhW7 S245 53,9
Error in line 132: cIQPnu A737 4,0
Error in line 147: cIQPnu S699 66,5
Error in line 145: OhW7 A101 48,8
Error in line 161: 0Bzcl A737 83,9
Error in line 163: 0Bzcl S699 74,7
Error in line 165: 0Bzcl A737 83,6
Error in line 172: cIQPnu A737 -4,9
Error in line 173: lAcpvYE A737 85,6
Error in line 176: M57UiqU A101 93,6
Error in line 181: OhW7 A101 -1,6
Error in line 171: cIQPnu A737 61,6
Error in line 177: M57UiqU S699 42,2
Error in line 190: M57UiqU S245 25,9
Error in line 188: dMSx S699 136,9
Error in line 175: lAcpvYE S245 37,1
Error in line 197: dMSx S245 38,1
Error in line 192: M57UiqU A737 75,7
Error in line 195: cIQPnu A737 39,8
Error in line 183: OhW7 A101 338,4
Error in line 225: A737 A737 92,6
Error in line 231: A737 A737 444,5
Error in line 232: 0Bzcl S245 43,1
Error in line 233: A737 A101 12,4
Error in line 242: A737 S699 444,36
Error in line 241: OhW7 S699 21,7
